--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h2{
   line-height: 2rem; 
 }
 .main{
-  height: 87vh;
+  height: 90vh;
   background-color: #ffffff;
   border-radius: 10px;
   color: #8b8686;
@@ -24,4 +24,20 @@ h2{
 .Perfume{
   font-family: monospace;
   letter-spacing: 0.5em;
+}
+.price{
+  display: flex;
+  align-items: center;
+}
+.price p{
+  padding: 10px;
+}
+.price1{
+  font-family: he;
+  font-size: 40px;
+  font-weight: bolder;
+  color: #438043;
+}
+.price2{
+  text-decoration: line-through;
 }
