--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h2{
   line-height: 2rem; 
 }
 .main{
-  height: 90vh;
+  height: 95vh;
   background-color: #ffffff;
   border-radius: 10px;
   color: #8b8686;
@@ -36,8 +36,20 @@ h2{
   font-family: he;
   font-size: 40px;
   font-weight: bolder;
-  color: #438043;
+  color: #3f8e3fd6;
 }
 .price2{
   text-decoration: line-through;
+}
+.btn{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+button{
+  color: #ffffff;
+  background-color: #3f8e3fd6;
+  height: 50px;
+  width: 100%;
+  border-radius: 8px;
 }
