--- a/style.css
+++ b/style.css
@@ -67,6 +67,8 @@
     background-color: #f4e9ef;
     padding: 20vh 25vw;
     height: 100vh;
+    display: flex;
+    justify-content: center;
   }
   .img{
     background-image: url(./images/image-product-desktop.jpg);
@@ -79,6 +81,8 @@
     background-color: #ffffff;
     border-radius: 10px;
     color: #8b8686;
+    width: 500px;
+    height:390px;
   }
   .Perfume{
     font-family: monospace;
